--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 <h1> main page is cool </h1>
-<p>ti think idk</p>
+<p>haha yes very nice</p>
 <footer>
-  <p> whats pn a main page again</p>
+  <p> goodbye!</p>
 </footer>
 </body>
 </html>
